// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> should render the component 1`] = `
<StyledComponent
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrapper__SpinnerWrapper-fZkYbn",
        "isStatic": true,
        "rules": Array [
          "position:relative;",
        ],
      },
      "displayName": "Wrapper__SpinnerWrapper",
      "render": [Function],
      "styledComponentId": "Wrapper__SpinnerWrapper-fZkYbn",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  <span>
    some children
  </span>
</StyledComponent>
`;

exports[`<Spinner /> should render the component with different props 1`] = `
<StyledComponent
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Wrapper__SpinnerWrapper-fZkYbn",
        "isStatic": true,
        "rules": Array [
          "position:relative;",
        ],
      },
      "displayName": "Wrapper__SpinnerWrapper",
      "render": [Function],
      "styledComponentId": "Wrapper__SpinnerWrapper-fZkYbn",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
>
  <Overlay__SpinnerOverlay />
  <Holder__SpinnerWrapper>
    <MDSpinner
      color1="rgb(66, 165, 245)"
      color2="rgb(239, 83, 80)"
      color3="rgb(253, 216, 53)"
      color4="rgb(76, 175, 80)"
      duration={1333}
      singleColor="#3f9bfd"
      size={100}
    />
  </Holder__SpinnerWrapper>
  <span>
    some children
  </span>
</StyledComponent>
`;
